<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/kotlin"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".QuestionActivity">

    <TextView
        android:id="@+id/question_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/enter_your_question"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:progress="0"
            android:max="5"
            android:minHeight="50dp"
            style="?android:progressBarStyleHorizontal"/>
        />
        <TextView
            android:id="@+id/progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_5"
            android:textSize="20sp"
            android:padding="10dp"
            android:textColor="@color/black"

            />

    </LinearLayout>

    <TextView
        android:id="@+id/opt_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/question_opinion"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/opinion1"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/opt_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/question_opinion"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/opinion1"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/opt_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/question_opinion"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/opinion1"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/opt_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/question_opinion"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/opinion1"
        android:textSize="18sp" />
    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/submit"
        android:textSize="16sp"
        android:textStyle="bold"/>
</LinearLayout>